# halo-sensitivity

./: .gitignore  Linear theory check.ipynb  Orbit Analysis.ipynb  README.md  Research Optimization.ipynb  appr_order_analyze.py  appr_order_check.py  pyproject.toml  requirements.txt  rmin.ipynb
 data/input_data/qualified_ic_halo/: HOPhaseVectorsEarthMoonL1_qualified.csv  HOPhaseVectorsEarthMoonL2_qualified.csv  readme.txt
data/input/: HOPhaseVectorsEarthMoonL1.csv  HOPhaseVectorsEarthMoonL2.csv
data/output/coefficients/: koefficients_data_L2.csv  koefficients_data_L2 — копия.csv
research_notebooks/: (DRAFT) Semi analytic optimization.ipynb  Linear theory check.ipynb  Orbit Analysis.ipynb  Research Initaial Point.ipynb  Research Optimization.ipynb  d_max_analytical.ipynb  rmin.ipynb
research_scripts/: appr_order_analyze.py  appr_order_check.py  calc_formula_coefficients.py  coeffs_new_usemp.py
research_scripts /: appr_order_analyze.py  appr_order_check.py  coeffs_new_usemp.py  jgg.py  spec_ic.py
results/: koefficients_data_L1.csv  koefficients_data — копия.csv
technical_scripts/: spec_ic.py
utils/: Deviation formula.ipynb  __init__.py  dmax.ipynb  fit_alpha_param_L1.py  fit_alpha_param_L1_DA_opt.py  fit_alpha_param_L2.py  fit_alpha_param_L2_DA_opt.py  formula_creators.py  graphL1.py  graphL2.py  halo_class.py  libration_batch_L1.py  libration_batch_L2.py  libration_sense.py  monodromy_matrix.py  parsers.py  rmin.ipynb  subfunctions.py  visualize_ellipsoid_deviation_L1.py  visualize_ellipsoid_deviation_L2.py  visuals.py
