[project]
name = "halo-sensitivity"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "daceypy>=1.2.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scipy>=1.16.2",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["*.ipynb", "tests*", "__pycache__"]
